--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "dist/index.js",
   "babel": {
     "presets": [
-      "@babel/preset-react"
+      "@babel/preset-react",
+      "@babel/preset-env"
     ]
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
